# Sistema-distribuido-iot

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.docker/: Dockerfile  docker-compose.yml
src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
